--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ before_script:
   - psql -c 'create database rails_messaging_test;' -U postgres
   - bundle exec rails db:migrate
 script:
-  - bundle exec rspec
-  - bundle exec cucumber
+  - bundle exec rails ci:tests
 deploy:
   provider: heroku
   api_key:
